--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="da">
   <head>
     <!-- Google Tag Manager -->
     <script>
@@ -16,47 +16,76 @@
     </script>
     <!-- End Google Tag Manager -->
 
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-Z1D8VR8T3N"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-Z1D8VR8T3N');
+      gtag('config', 'AW-16609682756');
+    </script>
+    <!-- Event snippet for Page view conversion page -->
+    <script>
+      function gtag_report_conversion(url) {
+        var callback = function () {
+          if (typeof(url) != 'undefined') {
+            window.location = url;
+          }
+        };
+        gtag('event', 'conversion', {
+          'send_to': 'AW-16609682756/CcthCLOrgbsZEMTKjvA9',
+          'event_callback': callback
+        });
+        return false;
+      }
+    </script>
+
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta
-      name="description"
-      content="Bedste rengøringsservice i Aarhus. Professionel rengøring med høj kvalitet og pålidelighed for private og erhvervslivet."
-    />
-    <meta
-      name="keywords"
-      content="rengøringsservice, Aarhus, privat rengøring, erhvervsrengøring, professionel rengøring"
-    />
+    <meta name="robots" content="index, follow" />
+    <meta name="description" content="Bedste rengøringsservice i Aarhus. Professionel rengøring med høj kvalitet og pålidelighed for private og erhvervslivet. Få et tilbud på rengøring i dag!" />
+    <meta name="keywords" content="rengøringsservice, Aarhus, privat rengøring, erhvervsrengøring, professionel rengøring, flytterengøring, vinduespudsning, havearbejde, bilrengøring" />
     <meta name="author" content="Ren Klar" />
-
-    <title>RenKlar.dk - Professionel Rengøringsservice i Aarhus</title>
-
     <link rel="icon" type="image/png" href="./src/assets/renklarlogo1.png" />
     <link rel="canonical" href="https://www.renklar.dk/" />
 
     <!-- Open Graph Meta Tags for social media -->
-    <meta
-      property="og:title"
-      content="Ren Klar - Professionel Rengøringsservice i Aarhus"
-    />
-    <meta
-      property="og:description"
-      content="Bedste rengøringsservice i Aarhus med høj kvalitet og pålidelighed."
-    />
-    <meta property="og:image" content="./src/assets/renklarlogo1.png" />
+    <meta property="og:title" content="RenKlar.dk - Professionel Rengøringsservice i Aarhus" />
+    <meta property="og:description" content="Bedste rengøringsservice i Aarhus med høj kvalitet og pålidelighed. Få et tilbud på rengøring i dag!" />
+    <meta property="og:image" content="https://www.renklar.dk/src/assets/renklarlogo1.png" />
     <meta property="og:url" content="https://www.renklar.dk/" />
     <meta property="og:type" content="website" />
 
     <!-- Twitter Card Meta Tags -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta
-      name="twitter:title"
-      content="Ren Klar - Professionel Rengøringsservice i Aarhus"
-    />
-    <meta
-      name="twitter:description"
-      content="Bedste rengøringsservice i Aarhus med høj kvalitet og pålidelighed."
-    />
-    <meta name="twitter:image" content="./src/assets/renklarlogo1.png" />
+    <meta name="twitter:title" content="RenKlar.dk - Professionel Rengøringsservice i Aarhus" />
+    <meta name="twitter:description" content="Bedste rengøringsservice i Aarhus med høj kvalitet og pålidelighed. Få et tilbud på rengøring i dag!" />
+    <meta name="twitter:image" content="https://www.renklar.dk/src/assets/renklarlogo1.png" />
+
+    <title>RenKlar.dk - Professionel Rengøringsservice i Aarhus</title>
+
+    <!-- Organization Schema Markup -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Organization",
+        "name": "RenKlar.dk",
+        "url": "https://www.renklar.dk/",
+        "logo": "https://www.renklar.dk/src/assets/renklarlogo1.png",
+        "contactPoint": [{
+          "@type": "ContactPoint",
+          "telephone": "+45 12 34 56 78",
+          "contactType": "customer service",
+          "areaServed": "DK",
+          "availableLanguage": ["Danish", "English"]
+        }],
+        "sameAs": [
+          "https://www.facebook.com/profile.php?id=61559722000605#",
+          "https://www.instagram.com/renklar.dk/"
+        ]
+      }
+    </script>
   </head>
   <body>
     <!-- Google Tag Manager (noscript) -->
